c4prj2_input/grade.txt
Grading at Tue Oct  2 03:00:28 UTC 2018
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
Compiling future.c -> future.o
future.c: In function ‘future_cards_from_deck’:
future.c:51:13: error: invalid initializer
  card_t c = deck->cards[k];
             ^
future.c:52:24: error: incompatible types when assigning to type ‘card_t * {aka struct card_tag *}’ from type ‘card_t {aka struct card_tag}’
  fc->decks[i].cards[j] = c;
                        ^
Compilation of future.c failed

Overall Grade: F
